--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
-  "name": "player",
+  "name": "discordbot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
+    "chalk": "^4.1.0",
     "discord.js": "^12.4.0",
     "dotenv": "^8.2.0",
     "ffmpeg-static": "^4.2.7",
     "firebase-admin": "^9.2.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.31",
+    "path": "^0.12.7",
     "pm2": "^4.5.0",
     "webpack": "^5.1.3",
     "ytdl-core": "^3.4.2"
   },
   "devDependencies": {
+    "@types/moment-timezone": "^0.5.30",
     "@types/node": "^14.14.2",
     "nodemon": "^2.0.6",
     "ts-loader": "^8.0.6",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3",
-    "webpack-cli": "^4.1.0"
+    "webpack-cli": "^4.1.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "scripts": {
     "serve": "nodemon nodemon.json",
@@ -29,12 +35,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/heptacode/Player.git"
+    "url": "git+https://github.com/heptacode/DiscordBot.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/heptacode/Player/issues"
+    "url": "https://github.com/heptacode/DiscordBot/issues"
   },
-  "homepage": "https://github.com/heptacode/Player#readme"
+  "homepage": "https://github.com/heptacode/DiscordBot#readme"
 }
