--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase-admin": "^9.2.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
+    "node-schedule": "^1.3.2",
     "path": "^0.12.7",
     "pm2": "^4.5.0",
     "webpack": "^5.1.3",
