--- a/package.json
+++ b/package.json
@@ -2,7 +2,22 @@
   "name": "discordbot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/app.js",
+  "scripts": {
+    "serve": "nodemon nodemon.json",
+    "tsc": "tsc",
+    "deploy": "git pull && tsc && pm2 start pm2.json && pm2 monit"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/heptacode/DiscordBot.git"
+  },
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/heptacode/DiscordBot/issues"
+  },
+  "homepage": "https://github.com/heptacode/DiscordBot#readme",
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
     "chalk": "^4.1.0",
@@ -10,39 +25,18 @@
     "dotenv": "^8.2.0",
     "ffmpeg-static": "^4.2.7",
     "firebase-admin": "^9.2.0",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.31",
+    "mongoose": "^5.11.8",
     "node-schedule": "^1.3.2",
     "path": "^0.12.7",
     "pm2": "^4.5.0",
-    "webpack": "^5.1.3",
-    "ytdl-core": "^3.4.2"
+    "scrape-youtube": "^2.0.7",
+    "ytdl-core": "^4.2.1"
   },
   "devDependencies": {
-    "@types/moment-timezone": "^0.5.30",
+    "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.2",
     "nodemon": "^2.0.6",
-    "ts-loader": "^8.0.6",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3",
-    "webpack-cli": "^4.1.0",
-    "webpack-node-externals": "^2.5.2"
-  },
-  "scripts": {
-    "serve": "nodemon nodemon.json",
-    "build": "webpack --config webpack.config.ts",
-    "deploy-ts": "git pull && pm2 start pm2-ts.json && pm2 monit",
-    "deploy": "git pull && webpack --config webpack.config.ts && pm2 start pm2.json && pm2 monit",
-    "stop": "pm2 delete pm2.json"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/heptacode/DiscordBot.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/heptacode/DiscordBot/issues"
-  },
-  "homepage": "https://github.com/heptacode/DiscordBot#readme"
+    "typescript": "^4.0.3"
+  }
 }
