--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/app.js",
+  "type": "module",
   "scripts": {
     "serve": "nodemon nodemon.json",
     "tsc": "tsc",
-    "deploy": "git pull && webpack --config webpack.config.js && pm2 start pm2.json && pm2 monit"
+    "deploy": "git pull && pm2 start pm2.json && pm2 monit"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,6 @@
     "dotenv": "^8.2.0",
     "ffmpeg-static": "^4.2.7",
     "firebase-admin": "^9.2.0",
-    "mongoose": "^5.11.8",
     "node-schedule": "^1.3.2",
     "path": "^0.12.7",
     "pm2": "^4.5.0",
@@ -33,8 +33,10 @@
     "ytdl-core": "^4.2.1"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.10.3",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
     "@types/node": "^14.14.16",
+    "babel-cli": "^6.26.0",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
