--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
     "chalk": "^4.1.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "ffmpeg-static": "^4.2.7",
     "firebase-admin": "^9.2.0",
+    "helmet": "^4.3.1",
+    "morgan": "^1.10.0",
     "node-schedule": "^1.3.2",
     "path": "^0.12.7",
     "pm2": "^4.5.0",
@@ -32,6 +37,9 @@
     "ytdl-core": "^4.4.1"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.0",
+    "@types/express": "^4.17.11",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.16",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
