--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
     "path": "^0.12.7",
     "pm2": "^4.5.0",
     "scrape-youtube": "^2.0.7",
-    "ytdl-core": "^4.4.1"
+    "ytdl-core": "^4.4.5"
   },
   "devDependencies": {
     "@types/compression": "^1.7.0",
     "@types/express": "^4.17.11",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.16",
+    "@types/node-schedule": "^1.3.1",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
