--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "serve": "nodemon",
     "tsc": "tsc",
-    "deploy": "tsc && pm2 start --env production && pm2 monit"
+    "deploy": "tsc && pm2 start --env production && pm2 monit",
+    "stop": "pm2 stop ecosystem.config.js"
   },
   "repository": {
     "type": "git",
