Update Command Typings

--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "homepage": "https://github.com/heptacode/discordbot#readme",
   "dependencies": {
-    "@discordjs/builders": "latest",
     "@discordjs/opus": "latest",
     "@discordjs/rest": "latest",
     "@discordjs/voice": "latest",
@@ -29,7 +28,7 @@
     "compression": "latest",
     "cors": "latest",
     "discord-api-types": "latest",
-    "discord.js": "latest",
+    "discord.js": "^13.7.0",
     "dotenv": "latest",
     "express": "latest",
     "ffmpeg-static": "latest",
@@ -56,7 +55,6 @@
     "@types/node-schedule": "latest",
     "esbuild": "latest",
     "esbuild-plugin-alias": "latest",
-    "esbuild-plugin-babel": "latest",
     "esbuild-plugin-node-externals": "latest",
     "esbuild-plugin-run": "latest",
     "rollup": "latest",
