--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/app.js",
   "scripts": {
+    "tsc": "tsc -w",
     "dev": "node ./scripts/esbuild.dev.js",
     "build": "node ./scripts/esbuild.build.js",
     "deploy": "git pull && node ./scripts/esbuild.build.js && pm2 start"
@@ -19,41 +20,40 @@
   },
   "homepage": "https://github.com/heptacode/discordbot#readme",
   "dependencies": {
-    "@discordjs/opus": "latest",
-    "@discordjs/rest": "latest",
-    "@discordjs/voice": "latest",
-    "aws-sdk": "latest",
-    "axios": "latest",
-    "chalk": "^4.1.2",
-    "compression": "latest",
-    "cors": "latest",
-    "discord-api-types": "latest",
-    "discord.js": "13.6",
-    "dotenv": "latest",
-    "express": "latest",
-    "ffmpeg-static": "latest",
-    "firebase-admin": "latest",
-    "helmet": "latest",
-    "morgan": "latest",
-    "node-schedule": "latest",
-    "path": "latest",
-    "pm2": "latest",
-    "scrape-youtube": "latest",
-    "ytdl-core": "latest"
+    "@discordjs/opus": "^0",
+    "@discordjs/rest": "^0",
+    "@discordjs/voice": "^0.8",
+    "aws-sdk": "^2",
+    "axios": "^0",
+    "chalk": "^4",
+    "compression": "^1",
+    "cors": "^2.8",
+    "discord-api-types": "^0.33",
+    "discord.js": "~13.6",
+    "dotenv": "^16",
+    "express": "^4",
+    "ffmpeg-static": "^5",
+    "firebase-admin": "^10",
+    "helmet": "^5",
+    "morgan": "^1",
+    "node-schedule": "^2",
+    "pm2": "^5",
+    "scrape-youtube": "^2",
+    "ytdl-core": "^4"
   },
   "devDependencies": {
     "@babel/core": "latest",
-    "@types/compression": "latest",
-    "@types/cors": "latest",
-    "@types/express": "latest",
-    "@types/morgan": "latest",
-    "@types/node": "latest",
-    "@types/node-schedule": "latest",
-    "esbuild": "latest",
-    "esbuild-plugin-alias": "latest",
-    "esbuild-plugin-run": "latest",
-    "ts-node": "latest",
-    "typescript": "latest"
+    "@types/compression": "^1",
+    "@types/cors": "^2",
+    "@types/express": "^4",
+    "@types/morgan": "^1",
+    "@types/node": "^17",
+    "@types/node-schedule": "^2",
+    "esbuild": "^0",
+    "esbuild-plugin-alias": "^0",
+    "esbuild-plugin-run": "^0",
+    "ts-node": "^10",
+    "typescript": "^4"
   },
   "packageManager": "yarn@3.2.1"
 }
