--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
     "module": "esnext",
     "target": "esnext",
     "moduleResolution": "node",
     "removeComments": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
+    "noEmit": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
     }
   },
   "include": ["src"],
-  "exclude": [".yarn/cache", "node_modules"]
+  "exclude": [".yarn", "node_modules"]
 }
